RESOLVED FIXED112474
REGRESSION (r145820): Stop over-retaining CFDataRefs in SharedBuffer::maybeTransferPlatformData()
https://bugs.webkit.org/show_bug.cgi?id=112474
Summary REGRESSION (r145820): Stop over-retaining CFDataRefs in SharedBuffer::maybeTr...
Andy Estes
Reported 2013-03-15 15:57:43 PDT
REGRESSION (r145820): Stop over-retaining CFDataRefs in SharedBuffer::maybeTransferPlatformData()
Attachments
Patch (1.66 KB, patch)
2013-03-15 16:00 PDT, Andy Estes
simon.fraser: review+
Andy Estes
Comment 1 2013-03-15 16:00:39 PDT
Simon Fraser (smfr)
Comment 2 2013-03-15 16:02:42 PDT
Comment on attachment 193391 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=193391&action=review > Source/WebCore/platform/cf/SharedBufferCF.cpp:86 > + RetainPtr<CFDataRef> cfData(AdoptCF, m_cfData.leakRef()); This should just assign.
Simon Fraser (smfr)
Comment 3 2013-03-15 16:08:21 PDT
Comment on attachment 193391 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=193391&action=review >> Source/WebCore/platform/cf/SharedBufferCF.cpp:86 >> + RetainPtr<CFDataRef> cfData(AdoptCF, m_cfData.leakRef()); > > This should just assign. This is OK, after discussion.
Andy Estes
Comment 4 2013-03-15 16:13:44 PDT
Note You need to log in before you can comment on or make changes to this bug.