REGRESSION (r145820): Stop over-retaining CFDataRefs in SharedBuffer::maybeTransferPlatformData() https://bugs.webkit.org/show_bug.cgi?id=112474

Reviewed by Simon Fraser.

Transfer ownership of m_cfData to the local variable rather than leaking a reference.

* platform/cf/SharedBufferCF.cpp:
(WebCore::SharedBuffer::maybeTransferPlatformData):

Canonical link: https://commits.webkit.org/130781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145958 268f45cc-cd09-0410-ab3c-d52691b4dbfc